Bugfix for not showing validation errors

--- a/manage-gui/src/pages/Detail.scss
+++ b/manage-gui/src/pages/Detail.scss
@@ -55,6 +55,28 @@
         }
     }
 
+    section.errors {
+        margin-left: 10%;
+        background-color: $red;
+        color: white;
+        border-radius: 5px;
+        padding: 15px;
+        h2 {
+            font-size: larger;
+        }
+        p {
+            margin-top: 10px;
+            text-transform: uppercase;
+            font-size: 17px;
+        }
+        ul {
+            list-style: none;
+            li {
+                margin-left: 10px;
+            }
+        }
+    }
+
     .actions {
         display: flex;
         margin-top: 25px;
